--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="hint_first_name">First Name</string>
+    <string name="hint_last_name">Last Name</string>
+    <string name="hint_age">Age</string>
+    <string name="hint_domain">Domain</string>
+    <string name="hint_phone_number">Phone Number</string>
+    <string name="button_validate">Validate and Show Result</string>
+    <string name="error_fill_field">Please fill in all fields</string>
+    <string name="error_field">Please enter info into field: %1$s</string>
+    <string name="switch_language">Switch Language 🇫🇷</string>
+    <string name="validate_and_show_result">Validate and Show Result</string>
+    <string name="your_text_will_appear_here">Your text will appear here</string>
+    <string name="please_enter_info">Please enter info into field: %1$s</string>
 </resources>
