--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="yes">Yes</string>
     <string name="no">No</string>
     <string name="title_activity_display_data">DisplayDataActivity</string>
+    <string name="title_activity_third">ThirdActivity</string>
 </resources>
