feat: ex7 done but can't open the phone call app

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -16,4 +16,6 @@
     <string name="confirmation_message">Êtes-vous sûr de vouloir soumettre ?</string>
     <string name="yes">Oui</string>
     <string name="no">Non</string>
+    <string name="title_activity_display_data">DisplayDataActivity</string>
+    <string name="title_activity_third">ThirdActivity</string>
 </resources>
